--- a/webpack/index.html
+++ b/webpack/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus alias inventore nihil eaque soluta officia! Inventore provident eius ab maiores reiciendis dolores eveniet amet omnis aliquam! Voluptatem architecto sit quas?</p>
         <a href="">test1</a>
         <a href="">test2</a>
         <a href="">test2</a>
