--- a/重写call和apply.html
+++ b/重写call和apply.html
@@ -72,24 +72,34 @@
             }
             context = context || window;
             context.fn = this;
-            var args = arguments[1];
-            const result = context.fn(...args);
+            if (arguments[1]) {
+                var result = context.fn(...arguments[1]);
+            } else {
+                var result = context.fn();
+            }
             delete context.fn;
             return result
         }
         console.log(fen.sayName.myApply1(xiang, [1, 2, 3, 4]))
+        console.log(fen.sayName.myApply1(xiang))
 
         //way2: change this point use bind
         Function.prototype.myApply2 = function (prop) {
             if (typeof this !== 'function') {
                 throw new TypeError('只能给函数用')
             }
-            var args = arguments[1];
             prop = prop || window;
-            var result = this.bind(prop)(...args);
+            if (arguments[1]) {
+                var result = this.bind(prop)(...arguments[1]);
+            } else {
+                var result = this.bind(prop)();
+            }
+
             return result;
         }
         console.log(fen.sayName.myApply2(xiang, [1, 2, 3, 4]))
+        console.log(fen.sayName.myApply2(xiang))
+
     </script>
 </body>
 
