--- a/柯里化.html
+++ b/柯里化.html
@@ -125,14 +125,55 @@
                 return _this.apply(context, _args.concat(Array.prototype.slice.call(arguments)))
             }
         }
-        var obj = {name:'xiang'}
-        var hello = (function (address,age){
-            console.log(this.name,arguments)
-        }).bind(obj,1,2,3)
-        hello('hangzhou',20)    
+        var obj = { name: 'xiang' }
+        var hello = (function (address, age) {
+            console.log(this.name, arguments)
+        }).bind(obj, 1, 2, 3)
+        hello('hangzhou', 20)
         //反柯里化
         //http://www.cnblogs.com/hustskyking/archive/2013/04/09/uncurrying.html
         //http://www.cnblogs.com/pigtail/p/3450852.html
+
+
+
+        //实现柯里化
+        function add(a, b, c, d) {
+            console.log(a + b + c + d)
+        }
+        function curry(fn, len = fn.length) {
+            var _args = [];
+            return function _curry() {
+                _args  = [...arr, ...arguments];
+                if (len === arr.length) {
+                    fn.apply(null, _args )
+                } else {
+                    return _curry
+                }
+            }
+        }
+        var _add = curry(add);
+        _add(1,2)(3)(4) //==> 10
+
+        var list = [
+            {
+                name: 'lucy'
+            },
+            {
+                name: 'jack'
+            }
+        ]
+        var prop = curry(function (key, obj) {
+            return obj[key];
+        });
+        function curry(fn) {
+            var args = Array.prototype.slice.call(arguments, 1);
+            console.log(args, 'args')
+            return function () {
+                fn(args)
+            }
+        }
+        var names = list.map(prop('name'));
+        console.log(names, 'names')
     </script>
 </body>
 
