--- a/防抖my.html
+++ b/防抖my.html
@@ -211,8 +211,8 @@
                 }
             }
         }
-        dom.addEventListener('scroll', throttle(fun, 1000))
-        // dom.addEventListener('scroll', debunce(fun, 1000))
+        // dom.addEventListener('scroll', throttle(fun, 1000))
+        dom.addEventListener('scroll', debunce(fun, 1000))
     </script>
 </body>
 
