--- a/JS/ES6/iterator.html
+++ b/JS/ES6/iterator.html
@@ -85,18 +85,70 @@
         console.log(man1, man2);
 
         //任意一个对象的Symbol.iterator方法，等于该对象的遍历器生成函数，调用该函数会返回该对象的一个遍历器对象
-        function* myIterator(){
+        function* myIterator() {
+            console.log(this, 'thisssss')
             yield 'hello';
             yield 'xiang';
             return 'hello,xiang';
         }
-        var obj2 = {};
+        var obj2 = { id: 123 };
         obj2[Symbol.iterator] = myIterator;
         var tt = obj2[Symbol.iterator]();
         console.log(tt.next());
-        for(var t of obj2){
-            console.log(t,'t') //注意：此处的return的 hello,xiang 不会被打印出来
+        for (var t of obj2) {
+            console.log(t, 't') //注意：此处的return的 hello,xiang 不会被打印出来
         }
+
+
+        //已经有个对象，然后要求用for...of 遍历出他的key和value
+        var obj3 = { id: 123, name: 'xiamg', age: 22 }
+        function* traversefn(obj) {
+            var keys = Object.keys(obj);
+            for (var i = 0; i < keys.length; i++) {
+                yield keys[i] + ' : ' + obj[keys[i]]
+            }
+        }
+        for (var key of traversefn(obj3)) {
+            //console.log(key)
+        }
+
+        //改写
+        var obj4 = { id: 22, name: 'xiamg', age: 33 }
+        function* traversefn2() {
+            var keys = Object.keys(this);
+            console.log(keys, 'keys')
+            for (var i = 0; i < keys.length; i++) {
+                yield keys[i] + ' : ' + this[keys[i]]
+            }
+        }
+        obj4[Symbol.iterator] = traversefn2;
+        for (var key of obj4) {
+            console.log(key)
+        }
+
+        //for...of外，... Array.from 解构赋值内部调用的都是遍历器接口，所以可以将将 Generator 函数返回的 Iterator 对象，作为参数。
+        function* numbers() {
+            yield 1
+            yield 2
+            return 3
+            yield 4
+        }
+        // 扩展运算符
+        [...numbers()] // [1, 2]
+        // Array.from 方法
+        Array.from(numbers()) // [1, 2]
+        // 解构赋值
+        let [x, y] = numbers();
+        x // 1
+        y // 2
+        // for...of 循环
+        for (let n of numbers()) {
+            console.log(n)
+        }
+        // 1
+        // 2
+
+        
     </script>
 
 
