--- a/柯里化.html
+++ b/柯里化.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        //柯里化又称部分求值，字面意思就是不会立刻求值，而是到了需要的时候再去求值.反柯里化的作用是，当我们调用某个方法，不用考虑这个对象在被设计时，是否拥有这个方法，只要这个方法适用于它，我们就可以对这个对象使用它。
+        //柯里化又称部分求值，字面意思就是不会立刻求值，而是到了需要的时候再去求值.
         //Curry 的核心思想是把多参数传入的函数拆成单参数（或部分）函数，内部再返回调用下一个单参数（或部分）函数，依次处理剩余的参数。
         //应用场景：1.
         var currying = function (fn) {
@@ -136,23 +136,23 @@
 
 
 
-        //实现柯里化
+        //4.实现柯里化
         function add(a, b, c, d) {
             console.log(a + b + c + d)
         }
         function curry(fn, len = fn.length) {
             var _args = [];
             return function _curry() {
-                _args  = [...arr, ...arguments];
+                _args = [...arr, ...arguments];
                 if (len === arr.length) {
-                    fn.apply(null, _args )
+                    fn.apply(null, _args)
                 } else {
                     return _curry
                 }
             }
         }
         var _add = curry(add);
-        _add(1,2)(3)(4) //==> 10
+        _add(1, 2)(3)(4) //==> 10
 
         var list = [
             {
@@ -174,6 +174,11 @@
         }
         var names = list.map(prop('name'));
         console.log(names, 'names')
+
+        //5.反柯里化
+        //反柯里化的作用在与扩大函数的适用性，使本来作为特定对象所拥有的功能的函数可以被任意对象所用.
+        //即把如下给定的函数签名： obj.func(arg1, arg2)
+        //转化成一个函数形式，签名如下： func(obj, arg1, arg2)
     </script>
 </body>
 
